mobile text-align fix

--- a/sass/partial/_intro.scss
+++ b/sass/partial/_intro.scss
@@ -13,7 +13,7 @@
       width: 90%;
       max-width: 550px;
       margin: 0 auto;
-      text-align: center;
+      text-align: left;
 
       &:first-child {
         @include trailer(1.5);
@@ -54,12 +54,6 @@
   @include at-breakpoint($desktop) {
     margin-bottom: 0;
     padding: rhythm(2.5) 0 rhythm(5);
-
-    .intro-content {
-      p {
-        text-align: left;
-      }
-    }
   }
 }
 
